# rhizo-embed

./: README.md  pyproject.toml
src/rhizo_embed/: __init__.py  flask_api.py  gradio_app.py
src/rhizo_embed/load/: scihub.py  wiki.py  youtube.py
src/rhizo_embed/search/: arxiv.py  scholar.py  wiki.py  youtube.py
